After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 169830 - Panes do not know their zoom factor
Panes do not know their zoom factor
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: GUI
git master
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2005-03-10 13:11 UTC by Jon Kåre Hellan
Modified: 2005-03-14 04:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jon Kåre Hellan 2005-03-10 13:11:35 UTC
New gnumeric.
Zoom to 200%
Cursor to C4.
Freeze panes.
Drag an image from nautilus onto gnumeric, and drop it at B2.
The parts of the image in panes top left, top right and bottom left are 
rendered at 100%. the part in bottom right pane is rendered (correctly) at 200%,
but believes that the left edget of the image is in col D.

I looked into this, and noticed that FooCanvas->pixels_per_unit was 2 for
the bottom right pane, but 1 for the others, so that foo_canvas_c2w gives an
incorrect result. Shouldn't pixels_per_unit be equal to the zoom factor for
all 4 panes?
Comment 1 Jody Goldberg 2005-03-14 04:29:42 UTC
fixed.  I wasn't bothering to init the zoom when a canvas was created, only when
zoom changed.