http://bugzilla.gnome.org/show_bug.cgi?id=169830 init the zoom.

2005-03-13  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=169830
	* src/gnumeric-pane.c (gnm_pane_init) : init the zoom.
	(gnumeric_pane_header_init) : ditto.

2005-03-15  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c (excel_write_workbook) : init n when totaling the
	  number of cells.